# ep2-nlp

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: exploration.ipynb
src/bertimbau_probing/: __init__.py  baselines.py  cli.py  config.py  data.py  datasets.py  metrics.py  models.py  train.py  vowels.py
tests/: test_data.py  test_metrics.py  test_vowels.py
